--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 fastapi==0.103.2
 uvicorn==0.27.1
-httpx==0.26.0
+httpx==0.28.0
 pytest==8.0.0
 pytest-asyncio==0.23.5
-python-dotenv==1.0.1 
+python-dotenv==1.0.1
+crewai==0.1.7
+ollama==0.4.7 
