--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,9 @@ httpx==0.28.0
 pytest==8.0.0
 pytest-asyncio==0.23.5
 python-dotenv==1.0.1
-crewai==0.1.7
-ollama==0.4.7 
+crewai
+ollama==0.4.7
+crewai
+langchain
+langchain_community
+langchain_google_genai
